完成登录注册
完成登录注册

--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,8 +1,8 @@
 <view class='my'>
 
     <view class='top'>
-      <view bindtap='login'>
-        登录
+      <view bindtap='login'  value='{{ loginValue }}'>
+        {{ loginValue }}
       </view>
       <view>
         人证核验
