--- a/pages/register/register.wxml
+++ b/pages/register/register.wxml
@@ -1,12 +1,13 @@
 <view class='register'>
   <form  bindsubmit="formSubmit" bindreset="formReset">
   <input placeholder="手机号码"  maxlength='11' focus='true' 
-    confirm-type='done' name='account' value='{{ account }}'></input>
+    confirm-type='done' name='account' bindinput='keyinput' value='{{ inputValue }}'></input>
 
   <input  password='true' confirm-type='done' maxlength='20' 
           name='password' value='{{ password }}'></input>
 
-  <button form-type='submit' class='login'>登录</button>
+  <button bindtap='add' class='login'>登录</button>
+  
   <button>注册</button>
     </form>
 </view>
